# report_generator_service

./: .gitignore  Dockerfile  README.md  controller.py  detached_run.sh  docker-compose.yml  minio_testrun.sh  nginx.conf  report_generator.py  upload2dockerHub.sh
controller_service/: Dockerfile  controller.py  controller_lib.py  rabbitmqhandler.py  simple_json.json
db_handler/: Dockerfile  db_insert.py
insert_db/: Dockerfile  Global _test_configuration.json  db_insert.py  global_test_config.json  simple_json.json  simple_json_fail.json  simple_json_fail_1.json  simple_json_fail_4.json  simple_json_fail_5.json  simple_json_pass.json
report_generator_service/: Dockerfile  docker-upload-version.sh  mongo_handler.py  pyproject.toml  report_generator.py  report_generator_lib.py
rg/: Dockerfile  docker-upload-version.sh  mycredentials.sh  pyproject.toml
rg/src/: mongo_handler.py  report_generator.py  report_generator_lib.py
