[tool.poetry]
name = "RG"
version = "0.0.3"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.7"
pymongo = "^4.0.1"
requests = "^2.26.0"
pika = "^1.2.0"
fpdf = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docker-upload-version = "./docker-upload-version.sh"